# chip_phytium

./: CMakeLists.txt  README.en.md  README.md  main.cpp  main.h
include/: chh_number_reco.h  common.h  opencv_sdk_phytium.h  testFile.h
opencv_output/: vedio_opencv
src/: chh_number_reco.cpp  common.cpp  testFile.cpp
with_opencv/include/: cv_common.h  cv_zone.h  digital_recongnition.h  phytium_vedio.h
with_opencv/src/: cv_common.cpp  cv_zone_Project1.cpp  cv_zone_Project2.cpp  cv_zone_Project3.cpp  cv_zone_chapter1.cpp  cv_zone_chapter2_3_4.cpp  cv_zone_chapter5_6_7.cpp  cv_zone_colorSelect.cpp  digital_recongnition.cpp  phytium_vedio.cpp
